Corrected aligning of footer contact block
Corrected aligning of top problems block;
corrected behavior of parallax one background image on screens with
width more than 1980px; Added Open Sans with font-width: 600 for
heading h4; Aligned half-blocks «HOW WE SOLVE» & «YOUR BENEFIT» by
panel center

--- a/css/bootstrap-override_new.css
+++ b/css/bootstrap-override_new.css
@@ -2,10 +2,15 @@
 .span6.bussiness-ex {
   width: 50%;
 }
-.span12 {
+.show-and-hide-content .span12 {
   width:100%;
 }
 
+@media (min-width: 1920px) {
+  div#parallax-one.parallax {
+    background-size: contain;
+  }
+}
 @media (min-width: 1200px) {
   .offer-content .cases [class*="span"],
   .offer-content .attachments [class*="span"] {
@@ -69,6 +74,9 @@
 
   body {
     padding-top:70px;
+  }
+  .mean-container a.meanmenu-reveal {
+    padding: 28px;
   }
     #section {
      padding-top:0px;
@@ -147,6 +155,7 @@
 }
 /* HERE */
 @media (max-width: 768px) {
+  
   .breadcrumb {
     display:none !important;
   }
