--- a/css/style_new.css
+++ b/css/style_new.css
@@ -52,6 +52,7 @@ p {
   font-family: "Open Sans", sans-serif;
   margin: 0px 0px 20px 0px;
   color: #8f9cac;
+  font-weight: 400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -89,14 +90,15 @@ h2, h2 a {
 }
 
 h3, h3 a {
-  /*font-family: 'Open Sans', serif;  */
+  font-family: 'Open Sans', serif;  
   font-size: 30px;
   color: #212121;
   margin: 0px 0px 10px 0px;
 }
 
 h4, h4 a {
-/*  font-family: "MyriadProSemiBold", sans-serif;*/  font-size: 24px;
+  font-family: "Open Sans", sans-serif;  
+  font-size: 24px;
   font-weight: 600;
   color: rgb(57,71,89);
   margin: 0px 0px 15px 0px;
@@ -346,7 +348,9 @@ img.brand:hover  {
 
 
 
-
+.big-unit-box>.row {
+  margin-left: 0;
+}
 .big-unit-box article.row.services-shortcode .span10 {
   margin-left: 40px;
 }
@@ -354,9 +358,8 @@ img.brand:hover  {
   color: white;
   font-family:'Open Sans',sans-serif;
   padding-top: 15px;
-    margin:0;
-
-  /*font-family: FontAwesome;*/
+  margin:0;
+  font-size: 24px;
 }
 .big-unit-box article.row.services-shortcode .span6 h4 {
   color:#5b5b5b;
@@ -368,7 +371,6 @@ img.brand:hover  {
 }
 .big-unit-box article.row.services-shortcode .span6 h4.closer {
 padding-top: 0;
-/*margin-top:0;*/
 }
 
 
@@ -463,10 +465,10 @@ div.big-unit-box {
   overflow: hidden;
 }
 .span2.services-icon-2 {
-  margin-left: 80px;
+  margin-left: 0px;
 }
 .big-unit-box-inside .services-icon-2 {
- width: 62px;
+   width: 62px;
   height: 62px;
 }
 
@@ -923,120 +925,6 @@ top: 0px;  z-index: 10; cursor: pointer; font-size:0px; text-indent: -2500px; op
 .top-nav-content-slider-right-no-text .flexslider:hover .flex-next:hover, .top-nav-content-slider-right-no-textv .flexslider:hover .flex-prev:hover {opacity: 1;}
 .top-nav-content-slider-right-no-text .flex-direction-nav .flex-disabled {opacity: .6!important; filter:alpha(opacity=60); cursor: default;}
 .top-nav-content-slider-right-no-text .flex-control-nav {display:none;}
-
-
-
-/* owl carousel carousel-top navigation */
-
-/*.owl-theme .owl-controlls .owl-buttons div{
-   display: inline-block;
-   zoom: 1;
-    display: inline;*/ /*IE7 life-saver */
-    /*width: 30px;
-    height: 30px; 
-    position: absolute;
-    cursor: pointer;
-    z-index: 100;    
-    top:0px;
-    line-height:30px;
-    font-size:18px;
-    background:#363636;
-    font-family:FontAwesome;
-    font-weight:bold;
-    font-style:normal;
-    text-align:center;
-}*/
-.owl-theme .owl-controlls .owl-buttons div{
-	  display: inline-block;
-	  zoom: 1;
-	  display: inline;/*IE7 life-saver */
-    width: 50px;
-    height: 50px; 
-    position: absolute;
-    cursor: pointer;
-    z-index: 100;    
-    top:110px;
-    line-height:30px;
-    text-align:center;
-}
-
-.owl-theme .owl-controlls {
-  margin-top: 0px;
-  text-align: center;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-
-/* Clickable class fix problem with hover on touch devices */
-/* Use it for non-touch hover action */
-.owl-theme .owl-controlls.clickable .owl-buttons div:hover{
-	opacity: 1;
-	text-decoration: none;
-  background:#B4BEC9
-}
-
-.owl-prev {
-  left: 0px;   
-}
-
-.owl-next {
-  right: 0px;
-  margin-right: 26px;
-}
-
-.owl-prev:before {
-  /*content:"\f104";*/
-  margin:0px auto;
-  color:#FFFFFF;
-}  
-
-.owl-next:before {
-  /*content:"\f105";*/
-  margin:0px auto;
-  color:#FFFFFF;
-}
-.owl-prev.disabled, .owl-next.disabled {
-  opacity:0.5;
-}
-
-
- 
-/* SLY slider */
-#portfolio-items {
-  margin-left: 0px !important;
-}
-
-/* Frame */
-.frame {
-	height: 250px;
-	line-height: 250px;
-	overflow: hidden;
-  padding-top:30px;
-}
-.frame ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-.frame ul li {
-	float: left;
-	width: 327px;
-	height: 100%;
-	margin: 0 1px 0 0;
-	padding: 0;
-	color: #ddd;
-	text-align: center;
-	cursor: pointer;
-  opacity:0.7;
-}
-.frame ul li.active {
-	color: #fff;
-  opacity:1;
-}
-
 
 
 /* Controls */
@@ -2662,7 +2550,9 @@ hr.blog{
 .portfolio li{
   list-style:none;
 }
-
+#portfolio-items {
+  margin: 0;
+}
 
 /*	Portfolio Filter */
 
@@ -2981,18 +2871,16 @@ blockquote{
 .user-type-nav span,
 .user-type-nav span:hover {
   color: #fff;
-  font-size: 17px;
+  font-size: 20px;
   font-weight: 600;
-  /* font-family: Myriad Pro; */
 }
 
 .proplems>h4 {
   text-align: center;
   color: #FFF;
   font-size: 24px;
-  font-family: 'MyriadPro',sans-serif;
   font-weight: 400;
-  margin: 0px 0px 30px 0px;
+  margin: 10px 0px 20px 0px;
 }
 h4.problems-title {
   padding-left: 24px;
@@ -3021,9 +2909,18 @@ article .span10 li {
   padding-right: 30px;
 }
 .proplems article .span6 {
-  margin:0;
-  width:50%;
+  margin: 0;
+  width: 50%;
 }
+.proplems article .span6.benefit h4,
+.proplems article .span6.benefit p {
+  padding: 0;
+  padding-left: 25px;
+}
+.proplems article .span6.benefit ol {
+  margin: 0 0 10px 52px;
+}
+
 ul.infrestructure {
   list-style: none;
   padding-bottom: 15px;
